[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_test_science-project"
version = "0.1.0"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["my_test_science_project"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest]
python_files = "test_*.py"
testpaths = ["my_test_science_project/tests"]
